--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <version>1.0-SNAPSHOT</version>
     <name>PersonnelManagementSystem Maven Webapp</name>
     <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    </properties>
     <dependencies>
         <!--Junit4-->
         <dependency>
